@@ -1,3 +1,9 @@
+2011-03-11  6.6.8-4 Glenn Randers-Pehrson <glennrp@image...>
+  * Don't try to store a bKGD chunk in a PNG8 when there are already
+    256 colors in the palette and the background colors is not in that
+    palette (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=18199);
+
 2011-03-10  6.6.8-4 Cristy  <quetzlzacatenango@image...>
   * Fx is a mathematicals function.  Do not treat transparency as black.
 
